# fx_news

./: .env.example  .gitignore  CLAUDE.md  README.md  masterplan.md  pyproject.toml
.github/workflows/: end-of-day.yml  morning-brief.yml
prompts/: session_context.md
src/: block_data.py  calendar_fetch.py  correlations.py  end_of_day.py  main.py  news.py  notion_log.py  price_data.py  research_dataset.py  research_features.py  run_health.py  sonnet_quality_check.py  telegram_send.py
tests/: test_calendar_reliability.py  test_news_pipeline.py  test_research_pipeline.py
