[project]
name = "fx-morning-brief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.94.1",
    "feedparser>=6.0.12",
    "notion-client>=3.0.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "yfinance>=1.2.2",
]
